Physics/Bullet/Raw/BulletCollision/Gimpact.chs

{#fun btGImpactCollisionAlgorithm_registerAlgorithm as btGImpactCollisionAlgorithm_registerAlgorithm    `(  BtCollisionDispatcherClass p0 )' =>     {  withBt* `p0'  -- ^ dispatcher
 } ->  `()'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btGImpactCollisionAlgorithm.h?r=2223#203>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btGImpactCollisionAlgorithm.cpp?r=2223>
-}
{#fun btGImpactCollisionAlgorithm_processCollision as btGImpactCollisionAlgorithm_processCollision    `( BtGImpactCollisionAlgorithmClass bc , BtCollisionObjectClass p0 , BtCollisionObjectClass p1 , BtDispatcherInfoClass p2 , BtManifoldResultClass p3 )' =>     { withBt* `bc'  -- ^ 
, withBt* `p0'  -- ^ body0
, withBt* `p1'  -- ^ body1
, withBt* `p2'  -- ^ dispatchInfo
, withBt* `p3'  -- ^ resultOut
 } ->  `()'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btGImpactCollisionAlgorithm.h?r=2223#84>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btGImpactCollisionAlgorithm.cpp?r=2223>
-}
{#fun btGImpactCollisionAlgorithm_destroyContactManifolds as btGImpactCollisionAlgorithm_destroyContactManifolds    `( BtGImpactCollisionAlgorithmClass bc )' =>     { withBt* `bc'  -- ^ 
 } ->  `()'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btGImpactCollisionAlgorithm.h?r=2223#180>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btGImpactCollisionAlgorithm.cpp?r=2223>
-}
{#fun btGImpactCollisionAlgorithm_gimpact_vs_gimpact_find_pairs as btGImpactCollisionAlgorithm_gimpact_vs_gimpact_find_pairs    `( BtGImpactCollisionAlgorithmClass bc , BtGImpactShapeInterfaceClass p2 , BtGImpactShapeInterfaceClass p3 , BtPairSetClass p4 )' =>     { withBt* `bc'  -- ^ 
, withTransform* `Transform'  peekTransform* -- ^ trans0
, withTransform* `Transform'  peekTransform* -- ^ trans1
, withBt* `p2'  -- ^ shape0
, withBt* `p3'  -- ^ shape1
, withBt* `p4'  -- ^ pairset
 } ->  `()'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btGImpactCollisionAlgorithm.h?r=2223#180>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btGImpactCollisionAlgorithm.cpp?r=2223>
-}
{#fun btGImpactCollisionAlgorithm_gimpact_vs_gimpact_find_pairs as btGImpactCollisionAlgorithm_gimpact_vs_gimpact_find_pairs'    `( BtGImpactCollisionAlgorithmClass bc , BtGImpactShapeInterfaceClass p2 , BtGImpactShapeInterfaceClass p3 , BtPairSetClass p4 )' =>     { withBt* `bc'  -- ^ 
, allocaTransform-  `Transform'  peekTransform* -- ^ trans0
, allocaTransform-  `Transform'  peekTransform* -- ^ trans1
, withBt* `p2'  -- ^ shape0
, withBt* `p3'  -- ^ shape1
, withBt* `p4'  -- ^ pairset
 } ->  `()'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btGImpactCollisionAlgorithm.h?r=2223#102>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btGImpactCollisionAlgorithm.cpp?r=2223>
-}
{#fun btGImpactCollisionAlgorithm_getLastManifold as btGImpactCollisionAlgorithm_getLastManifold    `( BtGImpactCollisionAlgorithmClass bc )' =>     { withBt* `bc'  -- ^ 
 } ->  `BtPersistentManifold'  mkBtPersistentManifold* #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btGImpactCollisionAlgorithm.h?r=2223#187>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btGImpactCollisionAlgorithm.cpp?r=2223>
-}
{#fun btGImpactCollisionAlgorithm_gimpact_vs_shape_find_pairs as btGImpactCollisionAlgorithm_gimpact_vs_shape_find_pairs    `( BtGImpactCollisionAlgorithmClass bc , BtGImpactShapeInterfaceClass p2 , BtCollisionShapeClass p3 , BtAlignedObjectArray_int_Class p4 )' =>     { withBt* `bc'  -- ^ 
, withTransform* `Transform'  peekTransform* -- ^ trans0
, withTransform* `Transform'  peekTransform* -- ^ trans1
, withBt* `p2'  -- ^ shape0
, withBt* `p3'  -- ^ shape1
, withBt* `p4'  -- ^ collided_primitives
 } ->  `()'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btGImpactCollisionAlgorithm.h?r=2223#187>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btGImpactCollisionAlgorithm.cpp?r=2223>
-}
{#fun btGImpactCollisionAlgorithm_gimpact_vs_shape_find_pairs as btGImpactCollisionAlgorithm_gimpact_vs_shape_find_pairs'    `( BtGImpactCollisionAlgorithmClass bc , BtGImpactShapeInterfaceClass p2 , BtCollisionShapeClass p3 , BtAlignedObjectArray_int_Class p4 )' =>     { withBt* `bc'  -- ^ 
, allocaTransform-  `Transform'  peekTransform* -- ^ trans0
, allocaTransform-  `Transform'  peekTransform* -- ^ trans1
, withBt* `p2'  -- ^ shape0
, withBt* `p3'  -- ^ shape1
, withBt* `p4'  -- ^ collided_primitives
 } ->  `()'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btGImpactCollisionAlgorithm.h?r=2223#74>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btGImpactCollisionAlgorithm.cpp?r=2223>
-}
{#fun btGImpactCollisionAlgorithm_destroyConvexAlgorithm as btGImpactCollisionAlgorithm_destroyConvexAlgorithm    `( BtGImpactCollisionAlgorithmClass bc )' =>     { withBt* `bc'  -- ^ 
 } ->  `()'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btGImpactCollisionAlgorithm.h?r=2223#130>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btGImpactCollisionAlgorithm.cpp?r=2223>
-}
{#fun btGImpactCollisionAlgorithm_checkConvexAlgorithm as btGImpactCollisionAlgorithm_checkConvexAlgorithm    `( BtGImpactCollisionAlgorithmClass bc , BtCollisionObjectClass p0 , BtCollisionObjectClass p1 )' =>     { withBt* `bc'  -- ^ 
, withBt* `p0'  -- ^ body0
, withBt* `p1'  -- ^ body1
 } ->  `()'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btGImpactCollisionAlgorithm.h?r=2223#120>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btGImpactCollisionAlgorithm.cpp?r=2223>
-}
{#fun btGImpactCollisionAlgorithm_newAlgorithm as btGImpactCollisionAlgorithm_newAlgorithm    `( BtGImpactCollisionAlgorithmClass bc , BtCollisionObjectClass p0 , BtCollisionObjectClass p1 )' =>     { withBt* `bc'  -- ^ 
, withBt* `p0'  -- ^ body0
, withBt* `p1'  -- ^ body1
 } ->  `BtCollisionAlgorithm'  mkBtCollisionAlgorithm* #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btGImpactCollisionAlgorithm.h?r=2223#167>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btGImpactCollisionAlgorithm.cpp?r=2223>
-}
{#fun btGImpactCollisionAlgorithm_shape_vs_shape_collision as btGImpactCollisionAlgorithm_shape_vs_shape_collision    `( BtGImpactCollisionAlgorithmClass bc , BtCollisionObjectClass p0 , BtCollisionObjectClass p1 , BtCollisionShapeClass p2 , BtCollisionShapeClass p3 )' =>     { withBt* `bc'  -- ^ 
, withBt* `p0'  -- ^ body0
, withBt* `p1'  -- ^ body1
, withBt* `p2'  -- ^ shape0
, withBt* `p3'  -- ^ shape1
 } ->  `()'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btGImpactCollisionAlgorithm.h?r=2223#288>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btGImpactCollisionAlgorithm.cpp?r=2223>
-}
{#fun btGImpactCollisionAlgorithm_setPart1 as btGImpactCollisionAlgorithm_setPart1    `( BtGImpactCollisionAlgorithmClass bc )' =>     { withBt* `bc'  -- ^ 
,  `Int'  -- ^ value
 } ->  `()'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btGImpactCollisionAlgorithm.h?r=2223#280>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btGImpactCollisionAlgorithm.cpp?r=2223>
-}
{#fun btGImpactCollisionAlgorithm_setPart0 as btGImpactCollisionAlgorithm_setPart0    `( BtGImpactCollisionAlgorithmClass bc )' =>     { withBt* `bc'  -- ^ 
,  `Int'  -- ^ value
 } ->  `()'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btGImpactCollisionAlgorithm.h?r=2223#91>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btGImpactCollisionAlgorithm.cpp?r=2223>
-}
{#fun btGImpactCollisionAlgorithm_clearCache as btGImpactCollisionAlgorithm_clearCache    `( BtGImpactCollisionAlgorithmClass bc )' =>     { withBt* `bc'  -- ^ 
 } ->  `()'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btGImpactCollisionAlgorithm.h?r=2223#292>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btGImpactCollisionAlgorithm.cpp?r=2223>
-}
{#fun btGImpactCollisionAlgorithm_getPart1 as btGImpactCollisionAlgorithm_getPart1    `( BtGImpactCollisionAlgorithmClass bc )' =>     { withBt* `bc'  -- ^ 
 } ->  `Int'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btGImpactCollisionAlgorithm.h?r=2223#284>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btGImpactCollisionAlgorithm.cpp?r=2223>
-}
{#fun btGImpactCollisionAlgorithm_getPart0 as btGImpactCollisionAlgorithm_getPart0    `( BtGImpactCollisionAlgorithmClass bc )' =>     { withBt* `bc'  -- ^ 
 } ->  `Int'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btGImpactCollisionAlgorithm.h?r=2223#258>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btGImpactCollisionAlgorithm.cpp?r=2223>
-}
{#fun btGImpactCollisionAlgorithm_gimpact_vs_concave as btGImpactCollisionAlgorithm_gimpact_vs_concave    `( BtGImpactCollisionAlgorithmClass bc , BtCollisionObjectClass p0 , BtCollisionObjectClass p1 , BtGImpactShapeInterfaceClass p2 , BtConcaveShapeClass p3 )' =>     { withBt* `bc'  -- ^ 
, withBt* `p0'  -- ^ body0
, withBt* `p1'  -- ^ body1
, withBt* `p2'  -- ^ shape0
, withBt* `p3'  -- ^ shape1
,  `Bool'  -- ^ swapped
 } ->  `()'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btGImpactCollisionAlgorithm.h?r=2223#205>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btGImpactCollisionAlgorithm.cpp?r=2223>
-}
{#fun btGImpactCollisionAlgorithm_calculateTimeOfImpact as btGImpactCollisionAlgorithm_calculateTimeOfImpact    `( BtGImpactCollisionAlgorithmClass bc , BtCollisionObjectClass p0 , BtCollisionObjectClass p1 , BtDispatcherInfoClass p2 , BtManifoldResultClass p3 )' =>     { withBt* `bc'  -- ^ 
, withBt* `p0'  -- ^ body0
, withBt* `p1'  -- ^ body1
, withBt* `p2'  -- ^ dispatchInfo
, withBt* `p3'  -- ^ resultOut
 } ->  `Float'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btGImpactCollisionAlgorithm.h?r=2223#242>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btGImpactCollisionAlgorithm.cpp?r=2223>
-}
{#fun btGImpactCollisionAlgorithm_gimpact_vs_gimpact as btGImpactCollisionAlgorithm_gimpact_vs_gimpact    `( BtGImpactCollisionAlgorithmClass bc , BtCollisionObjectClass p0 , BtCollisionObjectClass p1 , BtGImpactShapeInterfaceClass p2 , BtGImpactShapeInterfaceClass p3 )' =>     { withBt* `bc'  -- ^ 
, withBt* `p0'  -- ^ body0
, withBt* `p1'  -- ^ body1
, withBt* `p2'  -- ^ shape0
, withBt* `p3'  -- ^ shape1
 } ->  `()'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btGImpactCollisionAlgorithm.h?r=2223#207>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/Gimpact/btGImpactCollisionAlgorithm.cpp?r=2223>
-}
